public/css/navBarAndFooter.css
.navBar {
    background-color: #2E5895 !important;
    box-shadow: 0px 4px 15px hsla(357, 25%, 15%, 0.514);
    height: 6rem;
    margin: 2rem auto;
    border-radius: 10px;
    width: 80%;
   
  }
  .navbar-brand{
    color: white !important; 
  }


/* nav bar slide  */

@keyframes slide1 {
    0% {
        opacity: 0;
        width: 0;
    }
    100% {
        opacity: 100%;
    }
  }
  .dropdown-menu{
    background-color: #2E5895 !important;
    box-shadow: 0px 4px 15px hsla(357, 25%, 15%, 0.514);
    

  }
  .nav-items {
   display: flex;
   align-items: center;
  
  }
  .nav-links {
    font-size: 17px;
    background: transparent;
    border: none;
    padding: 1em 1.5em;
    text-decoration: none;
    color: #ffedd3;
    text-transform: uppercase;
    position: relative;
    transition: .2s ease;
  }
  
  .nav-links::before {
    content: '';
    position: absolute;
    left: 50%;
    bottom: 0;
    height: 2px;
    width: 0;
    background-color: #F69321;
    transition: .5s ease;
    transform: translateX(-50%);
  }
  
  .nav-links:hover {
    color: #F69321;
    transition-delay: .2s;
  }
  
  .nav-links:hover::before {
    width: 70%;
  }
.BeMentor-btn{
   background-color: #F69321;
   border: none;
   white-space:nowrap;
   padding: 8px 16px;
   text-align: center;
   height:70px;
   color: #f2f2f2;
   margin-bottom: 10px;
   border-radius: 20px;
   font-size: 16px;
   
  }
  @keyframes slide2 {
    0% {
        opacity: 0;
       
    }
    100% {
        opacity: 1;
    }
  }
  
  .nav-btn
  { 
    width:auto;
    height:40px;
    margin-bottom: 10px;
    border-radius: 15px;
    margin-left: 1rem;
  }
  .BeMentor-btn a{
    text-decoration: none; 
    color:#D9EEE1;
    font-weight: 600;
    }
    .BeMentor-btn:hover{
     background-color: #fd8700;
     box-shadow: 0px 4px 15px hsl(355deg 25% 15% / 10%);
    
     color: #f2f2f2;
    }

    /* style for footer */
footer{
  background-color: #D9EEE1;
}
.footer-heading{
  color:#282A35 !important;
  text-align: center;
  font-weight: 600;
  font-size: 25px;
}
footer p{
  color: #1f201fab !important;
}

.main {
  display: flex;
  flex-direction: column;
  gap: 0.5em;
}

.up {
  display: flex;
  justify-content: center;
  flex-direction: row;
  gap: 0.5em;
}

.down {
  display: flex;
  justify-content: center;
  flex-direction: row;
  gap: 0.5em;
}

.card1 {
  width: 90px;
  height: 90px;
  outline: none;
  border: none;
  background: white;
  border-radius: 90px 5px 5px 5px;
  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
  transition: .2s ease-in-out;
}

.instagram {
  margin-top: 1.5em;
  margin-left: 1.2em;
  fill: #cc39a4;
}

.card2 {
  width: 90px;
  height: 90px;
  outline: none;
  border: none;
  background: white;
  border-radius: 5px 90px 5px 5px;
  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
  transition: .2s ease-in-out;
}

.twitter {
  margin-top: 1.5em;
  margin-left: -.9em;
  fill: #03A9F4;
}

.card3 {
  width: 90px;
  height: 90px;
  outline: none;
  border: none;
  background: white;
  border-radius: 5px 5px 5px 90px;
  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
  transition: .2s ease-in-out;
}

.github {
  margin-top: -.6em;
  margin-left: 1.2em;
}

.card4 {
  width: 90px;
  height: 90px;
  outline: none;
  border: none;
  background: white;
  border-radius: 5px 5px 90px 5px;
  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
  transition: .2s ease-in-out;
}

.discord {
  margin-top: -.9em;
  margin-left: -1.2em;
  fill: #8c9eff;
}

.card1:hover {
  cursor: pointer;
  scale: 1.1;
  background-color: #F69321;
}

.card1:hover .instagram {
  fill: white;
}

.card2:hover {
  cursor: pointer;
  scale: 1.1;
  background-color: #03A9F4;
}

.card2:hover .twitter {
  fill: white;
}

.card3:hover {
  cursor: pointer;
  scale: 1.1;
  background-color: black;
}

.card3:hover .github {
  fill: white;
}

.card4:hover {
  cursor: pointer;
  scale: 1.1;
  background-color: #8c9eff;
}

.card4:hover .discord {
  fill: white;
}

.Email-input{
  border-radius: 10px;
  border: #D9EEE1 .5px solid;
  box-shadow: 0px 8px 15px hsla(357, 25%, 15%, 0.349);
  width: 100%;
  color: #000 !important;
  background-color: #ffffff;

  height: 40px;
  outline: none;
}
.Email-input:focus {
  border: #1f201f .5px solid;
}
.newsletter form{
   width: 80%;
   margin:  auto ;
}
#comment{
  border-radius: 10px;
  border: #D9EEE1 .5px solid;
  box-shadow: 0px 8px 15px hsla(357, 25%, 15%, 0.349);
  width: 100%;
  color: #000 !important;
  margin: 20px 0px 0px;
  background-color: #ffffff;
  height: 80px;
  outline: none;
}
#comment:focus{
  border: #1f201f .5px solid;
}
.subscribe-btn{
  margin: 20px 0px 30px;
  background-color: #F69321;
  width: 100%;
  height: 40px;
  border-radius: 10px;
  box-shadow: 0px 8px 15px hsla(357, 25%, 15%, 0.349);
  border: #FD8700 1px solid;

}
.subscribe-btn:hover{
  box-shadow: 0px 8px 15px hsla(357, 25%, 15%, 0.521);
}
@media  (max-width:412px) {
    .navBar {
      padding: 0PX;
      margin-bottom: 0px;
      width: 100%;
      border-top-left-radius: 0px;
      border-top-right-radius: 0px;
      /* border-top-radius: none; */
    }
    
  }

